added comment in notebook

--- a/house_sales_analysis.ipynb
+++ b/house_sales_analysis.ipynb
@@ -46,6 +46,7 @@
     "### Final Project: Comparison of Four Models :\n",
     "- Select one technical problem (classification, regression, clustering, or dimensionality reduction).\n",
     "- Implement four models from different algorithm families to solve the chosen problem.\n",
+    "- Optimize the hyperparameters of the algorithms using two techniques\n",
     "- Evaluate and compare their performances, explaining why some models may be better suited than others.\n",
     "\n",
     "## 1.4 Importance of the Project\n",
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -318,13 +319,13 @@
    ],
    "source": [
     "# Display first lines\n",
-    "print(\"Aperçu du dataset :\")\n",
+    "print(\"Overview of the dataset:\")\n",
     "display(df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -351,16 +352,16 @@
     }
    ],
    "source": [
-    "# shape and columns\n",
-    "print(f\"Nombre de lignes : {df.shape[0]}\")\n",
-    "print(f\"Nombre de colonnes : {df.shape[1]}\")\n",
-    "print(\"Colonnes disponibles :\")\n",
+    "# Shape and columns\n",
+    "print(f\"Number of rows: {df.shape[0]}\")\n",
+    "print(f\"Number of columns: {df.shape[1]}\")\n",
+    "print(\"Available columns:\")\n",
     "display(df.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -404,8 +405,8 @@
     }
    ],
    "source": [
-    "# checking missing values\n",
-    "print(\"\\nValeurs manquantes :\")\n",
+    "# Checking missing values\n",
+    "print(\"\\nMissing values:\")\n",
     "display(df.isnull().sum())"
    ]
   },
@@ -418,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -431,8 +432,8 @@
     }
    ],
    "source": [
-    "# checking duplicated data\n",
-    "print(f\"\\nNombre de doublons : {df.duplicated().sum()}\")"
+    "# Checking duplicated data\n",
+    "print(f\"\\nNumber of duplicates: {df.duplicated().sum()}\")"
    ]
   },
   {
@@ -444,11 +445,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ajout de caractéristiques dérivées \n",
+    "# Adding derived features\n",
     "df['age'] = 2024 - df['yr_built']\n",
     "df['sqft_grade_interaction'] = df['sqft_living'] * df['grade']"
    ]
@@ -504,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +690,7 @@
    ],
    "source": [
     "# Display normalized data\n",
-    "print(\"\\nDonnées normalisées :\")\n",
+    "print(\"\\nNormalized data:\")\n",
     "display(df_scaled.head())"
    ]
   },
@@ -704,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +726,7 @@
     "plt.title('Distribution of House Prices')\n",
     "plt.xlabel('Price')\n",
     "plt.ylabel('Frequency')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -827,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -840,71 +841,73 @@
     }
    ],
    "source": [
-    "# Tentative d'application de DBSCAN sur les données brutes\n",
+    "# Attempting to apply DBSCAN on raw data\n",
     "from sklearn.cluster import DBSCAN\n",
     "\n",
+    "# Initialize DBSCAN with eps=0.5 and min_samples=5\n",
     "dbscan_raw = DBSCAN(eps=0.5, min_samples=5)\n",
     "clusters_raw = dbscan_raw.fit_predict(df_scaled)\n",
     "\n",
-    "# Compter le nombre de clusters et de points considérés comme bruit\n",
+    "# Count the number of clusters and noise points\n",
     "num_clusters_raw = len(set(clusters_raw)) - (1 if -1 in clusters_raw else 0)\n",
     "num_noise_raw = list(clusters_raw).count(-1)\n",
     "\n",
-    "print(f\"Nombre de clusters après DBSCAN sur données brutes: {num_clusters_raw}\")\n",
-    "print(f\"Nombre de points considérés comme bruit: {num_noise_raw}\")"
+    "# Display results\n",
+    "print(f\"Number of clusters after DBSCAN on raw data: {num_clusters_raw}\")\n",
+    "print(f\"Number of points considered as noise: {num_noise_raw}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Résultats : \n",
+    "Results:\n",
     "\n",
-    "Nombre de clusters identifiés : 4 (après application de DBSCAN sur les données brutes). <br>\n",
-    "Nombre de points considérés comme bruit : 4093 (soit environ 99.4% des données).\n",
+    "Number of clusters identified: 4 (after applying DBSCAN to the raw data). <br>\n",
+    "Number of points considered as noise: 4093 (approximately 99.4% of the data).\n",
     "\n",
-    "Interprétation :\n",
+    "Interpretation:\n",
     "\n",
-    "Ces résultats montrent que l'application directe de DBSCAN sur les données brutes conduit à une segmentation limitée et peu significative :\n",
+    "These results show that the direct application of DBSCAN to the raw data leads to limited and less meaningful segmentation:\n",
+    "- High noise rate: When we applied DBSCAN directly to the raw data with default parameters (eps=0.5 and min_samples=5), the majority of observations (approximately 99.4%) were classified as noise. This result indicates that these parameters were not able to capture dense groupings in the initial multidimensional space. This initial experiment confirms the importance of reducing dimensionality before applying DBSCAN to facilitate the detection of meaningful clusters. We will analyze in more detail in the following section how the choice of hyperparameters (eps and min_samples) influences the results and their interpretation.\n",
     "\n",
-    "- Fort taux de bruit : Lorsque nous avons appliqué DBSCAN directement sur les données brutes avec les paramètres par défaut (eps=0.5 et min_samples=5), la majorité des observations (environ 99.4%) ont été classifiées comme bruit. Ce résultat montre que ces paramètres ne permettaient pas de capturer des groupements denses dans l'espace multidimensionnel initial. Cette expérience initiale confirme l'importance de réduire la dimensionalité avant d'appliquer DBSCAN, afin de faciliter la détection de clusters significatifs. Nous analyserons plus en détail dans la section suivante comment le choix des hyperparamètres (eps et min_samples) influence les résultats et leur interprétation.\n",
-    "- Impact de la haute dimensionalité : Le problème principal réside dans la \"curse of dimensionality\". Avec un grand nombre de dimensions, les distances entre les points deviennent moins significatives, rendant difficile l'identification de clusters denses.\n",
+    "- Impact of high dimensionality: The main issue lies in the \"curse of dimensionality.\" With a large number of dimensions, the distances between points become less meaningful, making it difficult to identify dense clusters.\n",
     "\n",
-    "En conséquence, DBSCAN considère la plupart des points comme isolés et donc comme du bruit.\n",
+    "As a result, DBSCAN considers most points as isolated and therefore as noise.\n",
     "\n",
-    "Conclusion :\n",
+    "Conclusion:\n",
     "\n",
-    "Les résultats obtenus avec DBSCAN sur les données brutes montrent clairement ses limitations dans un contexte à haute dimensionalité. Pour remédier à ce problème, il est essentiel de réduire la dimensionnalité des données avant d'appliquer l'algorithme. Cette étape permettra de capturer les relations essentielles entre les variables tout en simplifiant l'espace de recherche pour DBSCAN"
+    "The results obtained with DBSCAN on the raw data clearly highlight its limitations in a high-dimensional context. To address this issue, it is essential to reduce the dimensionality of the data before applying the algorithm. This step will help capture the essential relationships between variables while simplifying the search space for DBSCAN."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.3 Solution Adoptée\n",
+    "## 3.3 Adopted Solution\n",
     "\n",
-    "Pour remédier à ce problème, nous avons décidé de réduire la dimensionnalité avant d'appliquer DBSCAN. Après avoir testé différentes techniques (PCA et UMAP), nous avons opté pour UMAP pour les raisons suivantes :\n",
+    "To address this issue, we decided to reduce dimensionality before applying DBSCAN. After testing different techniques (PCA and UMAP), we chose UMAP for the following reasons:\n",
     "\n",
-    "Preservation des Structures Locales :\n",
-    "UMAP est capable de capturer des relations complexes et non linéaires entre les variables, ce qui est crucial pour identifier des clusters significatifs.<br>\n",
+    "Preservation of Local Structures:\n",
+    "UMAP is capable of capturing complex and non-linear relationships between variables, which is crucial for identifying meaningful clusters.\n",
     "\n",
-    "Performances Supérieures :\n",
-    "Comparé à PCA, UMAP a produit des résultats plus granulaires et pertinents lors de nos expérimentations précédentes. <br>\n",
+    "Superior Performance:\n",
+    "Compared to PCA, UMAP produced more granular and relevant results in our previous experiments.\n",
     "\n",
-    "Visualisation en 3D :\n",
-    "UMAP permet une projection en 3D qui facilite l'interprétation visuelle des clusters."
+    "3D Visualization:\n",
+    "UMAP allows for 3D projection, which facilitates the visual interpretation of clusters."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.4 Implémentation de UMAP"
+    "## 3.4 Implementation of UMAP"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -919,14 +922,14 @@
     }
    ],
    "source": [
-    "# Importation de UMAP\n",
+    "# Importing UMAP\n",
     "import umap.umap_ as umap\n",
     "\n",
-    "# Réduction de dimension avec UMAP (3D)\n",
+    "# Dimensionality reduction with UMAP (3D)\n",
     "umap_reducer = umap.UMAP(n_components=3, random_state=42)\n",
     "df_umap = umap_reducer.fit_transform(df_scaled)\n",
     "\n",
-    "# Conversion en DataFrame pour facilité l'analyse\n",
+    "# Converting to DataFrame for easier analysis\n",
     "df_umap = pd.DataFrame(df_umap, columns=[\"UMAP_1\", \"UMAP_2\", \"UMAP_3\"])"
    ]
   },
@@ -14328,7 +14331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La projection montre que les données se regroupent naturellement en plusieurs clusters distincts.<br>"
+    "The projection shows that the data naturally groups into several distinct clusters."
    ]
   },
   {
@@ -14337,15 +14340,15 @@
    "source": [
     "#### Comparison with Original Data\n",
     "\n",
-    "Après avoir réduit la dimensionnalité avec UMAP, il est important de discuter des informations conservées ou perdues :\n",
+    "After reducing dimensionality with UMAP, it is important to discuss the information retained or lost:\n",
     "\n",
-    "Informations Conservées : \n",
-    "- UMAP conserve les structures locales des données, ce qui signifie que les similarités entre les points proches sont bien préservées.\n",
-    "- Certains clusters pourraient correspondre à des maisons similaires en termes de prix, superficie, ou localisation.<br>\n",
-    "- Les outliers (points isolés) pourraient représenter des maisons atypiques (luxueuses ou anciennes).\n",
+    "Retained Information:\n",
+    "- UMAP preserves the local structures of the data, meaning that the similarities between nearby points are well maintained.\n",
+    "- Some clusters might correspond to houses with similar characteristics in terms of price, size, or location.\n",
+    "- Outliers (isolated points) could represent atypical houses (luxurious or old).\n",
     "\n",
-    "Informations Perdues :\n",
-    "- Bien que UMAP conserve les structures locales des données, certaines relations globales (comme celles liées aux variables zipcode ou yr_built) peuvent être atténuées. Cependant, dans notre cas, ces pertes sont minimes par rapport aux avantages apportés par la simplification de l'espace de recherche."
+    "Lost Information:\n",
+    "- Although UMAP preserves the local structures of the data, some global relationships (such as those related to variables like zipcode or yr_built) may be attenuated. However, in our case, these losses are minimal compared to the benefits brought by the simplification of the search space."
    ]
   },
   {
