chore: finalize section 6.1 and 6.2.1 for clustering analysis
- Introduced Section 6, explaining the choice of clustering over classification, regression, or dimensionality reduction, with justification.
- Presented the four clustering models (DBSCAN, K-Means, Agglomerative Clustering, Spectral Clustering) and their respective algorithm families.
- Summarized previous results obtained with DBSCAN, avoiding reapplication.
- Added a detailed comparison of hyperparameter tuning results from Grid Search and Random Search for DBSCAN.

--- a/house_sales_analysis.ipynb
+++ b/house_sales_analysis.ipynb
@@ -30241,7 +30241,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In this section, we will introduce the technical problem chosen for this project from the options of classification, regression, clustering, or dimensionality reduction. After careful consideration, clustering has been selected as the focus of this analysis. This decision is based on several key factors:\n",
+    "\n",
+    "- Nature of the Dataset : The dataset at hand, derived from kc_house_data.csv and enriched with additional features such as age and sqft_grade_interaction, contains rich information about housing properties, including price, size, location, and condition. These attributes naturally lend themselves to grouping similar properties together, making clustering an ideal choice.\n",
+    "- Practical Applications : Clustering allows us to segment the housing market into distinct groups based on shared characteristics. These segments can provide actionable insights for real-world applications such as market analysis, investment strategies, and targeted marketing campaigns. For example, identifying clusters of affordable homes versus luxury properties can help stakeholders make informed decisions.\n",
+    "- Exploration of Relationships : Unlike classification or regression, which require labeled data or a specific target variable, clustering enables us to explore the inherent structure of the data without predefined assumptions. This unsupervised approach is particularly valuable for uncovering hidden patterns and relationships within the dataset.\n",
+    "- Previous Work : Earlier stages of this project have already demonstrated the effectiveness of combining dimensionality reduction (via UMAP) with density-based clustering (DBSCAN). This foundation provides a strong starting point for further exploration and comparison of clustering algorithms.\n",
+    "\n",
+    "By focusing on clustering, this project aims to deepen our understanding of how different algorithms and hyperparameter settings impact the segmentation of the housing market. Additionally, it offers an opportunity to evaluate and compare various clustering techniques, ultimately identifying the most suitable approach for this dataset.\n",
+    "\n",
+    "In the following sections, we will implement and analyze four clustering models from different algorithm families, optimize their hyperparameters, and interpret the results to draw meaningful conclusions."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -30253,7 +30264,32 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "To address the problem of clustering, we will work with four models from different algorithm families, as required by the project guidelines. Each model represents a distinct approach to clustering, allowing us to evaluate their strengths and weaknesses when applied to our housing dataset. The selected models and their corresponding algorithm families are as follows:\n",
+    "\n",
+    "- DBSCAN (Density-Based Spatial Clustering of Applications with Noise)\n",
+    "Algorithm Family: Density-Based Clustering <br>\n",
+    "Description: DBSCAN identifies clusters based on the density of points in a region. It is particularly effective for datasets with clusters of arbitrary shapes and can handle noise points effectively. <br>\n",
+    "Reason for Selection: DBSCAN has already been explored earlier in the project, providing a strong foundation for comparison with other models.\n",
+    "\n",
+    "- K-Means Clustering\n",
+    "Algorithm Family: Centroid-Based Clustering <br>\n",
+    "Description: K-Means partitions the data into k clusters by minimizing the variance within each cluster. It assumes spherical clusters and is computationally efficient for large datasets. <br>\n",
+    "Reason for Selection: K-Means is one of the most widely used clustering algorithms and serves as a baseline for comparison.\n",
+    "\n",
+    "- Agglomerative Clustering\n",
+    "Algorithm Family: Hierarchical Clustering (Aggregation-Based) <br>\n",
+    "Description: Agglomerative Clustering builds a hierarchy of clusters by iteratively merging smaller clusters based on a linkage criterion (e.g., single, complete, or average linkage). <br>\n",
+    "Reason for Selection: This model provides a hierarchical perspective on clustering, which is useful for understanding relationships between data points at different levels of granularity.\n",
+    "\n",
+    "- Spectral Clustering\n",
+    "Algorithm Family: Topology-Based Clustering <br>\n",
+    "Description: Spectral Clustering uses graph theory to partition data based on its connectivity structure. It leverages eigenvalues of similarity matrices to identify clusters.<br>\n",
+    "Reason for Selection: Spectral Clustering is well-suited for datasets where cluster boundaries are non-linear and cannot be easily separated in Euclidean space.\n",
+    "\n",
+    "These models were chosen to represent a diverse set of clustering techniques, ensuring that we explore a variety of approaches to address the same problem. In the following subsections, we will apply each model to our dataset, optimize their hyperparameters, and interpret their results individually before comparing them in Section 6.3.\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -30265,7 +30301,41 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Summary of Results Obtained with DBSCAN\n",
+    "\n",
+    "DBSCAN was applied to the UMAP-reduced data in Section 4, and the results revealed meaningful insights into the structure of the housing market. Below is a summary of the key findings:\n",
+    "\n",
+    "- Initialization and Hyperparameters : <br>\n",
+    "DBSCAN was initialized with eps=0.5 and min_samples=5, chosen as a starting point based on common practices and the nature of the dataset.\n",
+    "These hyperparameters successfully identified 6 distinct clusters , with only 4 noise points (0.07% of the dataset). This indicates that the majority of the data points belong to meaningful clusters.\n",
+    "\n",
+    "- Cluster Characteristics : <br>\n",
+    "Cluster Sizes : <br>\n",
+    "Cluster 1 (Red): The largest cluster, representing approximately 65% of the data points. These are affordable homes in established neighborhoods.<br>\n",
+    "Cluster 0 (Blue): A relatively large cluster, representing mid-range family homes.<br>\n",
+    "Clusters 2, 4, and 5: Smaller clusters, each representing niche groups such as newer urban apartments, luxury properties, or large suburban homes.<br>\n",
+    "Cluster 3 (Purple): A very small, isolated cluster representing atypical or luxury properties.<br>\n",
+    "Noise Points : Scattered across the dataset, these points likely represent outliers or houses with unique characteristics.\n",
+    "\n",
+    "- Visualization and Observations :<br>\n",
+    "A 3D visualization of the clusters highlighted their irregular shapes and varying densities, reflecting the complex relationships between features.<br>\n",
+    "Clusters 0 and 1 were closely related, suggesting overlapping characteristics, while Clusters 2, 4, and 5 were well-separated, indicating distinct features.<br>\n",
+    "Cluster 3 was isolated, representing a unique group of properties.\n",
+    "\n",
+    "- Interpretation of Clusters :<br>\n",
+    "Cluster 0 : Affordable, established homes with smaller sizes and older construction dates.<br>\n",
+    "Cluster 1 : Mid-range family homes offering a balance between price and space.<br>\n",
+    "Cluster 2 : Newer urban apartments or townhouses catering to modern living preferences.<br>\n",
+    "Cluster 3 : Renovated older homes with higher value due to significant upgrades.<br>\n",
+    "Cluster 4 : Large properties with extensive land, suitable for suburban living.<br>\n",
+    "Cluster 5 : Luxury waterfront properties with premium features and locations.<br>\n",
+    "\n",
+    "- Strengths of DBSCAN :<br>\n",
+    "Successfully identified clusters of arbitrary shapes and sizes.<br>\n",
+    "Robust to noise, classifying only a minimal number of points as outliers.<br>\n",
+    "Did not require specifying the number of clusters beforehand, allowing for an exploratory approach."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -31218,6 +31288,32 @@
     "The Random Search results reinforce our findings from the Grid Search while providing a more precise eps value. This refinement may lead to marginally better-defined housing segments.<br>\n",
     "With 7 well-defined segments, we have a solid foundation for analyzing different types of properties in our market. Each segment likely represents a distinct category of housing, such as luxury apartments, suburban family homes, or urban condos.<br>\n",
     "The stability of these segments across different search methods and parameter combinations suggests that they are inherent to the data, not artifacts of our search methodology. This gives us confidence in the reliability of our market segmentation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparison of Grid Search and Random Search\n",
+    "\n",
+    "Both Grid Search and Random Search yielded highly consistent results, reinforcing the reliability of the optimal parameters for DBSCAN:\n",
+    "\n",
+    "- Similarity in Results : <br>\n",
+    "Both methods identified min_samples=6 as the optimal value. <br>\n",
+    "The eps values were very close (eps=0.55 for Grid Search vs. eps≈0.535 for Random Search).<br>\n",
+    "Both approaches produced 7 clusters with comparable Silhouette Scores (0.48450553 vs. 0.484507).\n",
+    "\n",
+    "- Performance Comparison : <br>\n",
+    "Grid Search : Systematically evaluated all possible combinations, ensuring no potentially optimal parameter set was missed.<br>\n",
+    "Random Search : More computationally efficient, especially for larger parameter spaces, while still achieving comparable results. <br>\n",
+    "\n",
+    "- Practical Implications : <br>\n",
+    "The slight refinement in eps provided by Random Search (0.535 vs. 0.55) may lead to marginally better-defined clusters, particularly in regions with lower data density. <br>\n",
+    "However, the negligible difference in performance metrics (e.g., Silhouette Score) suggests that both methods are equally effective for this dataset.\n",
+    "\n",
+    "- Conclusion :<br>\n",
+    "The consistency between Grid Search and Random Search highlights the robustness of the clustering results.<br>\n",
+    "For datasets with smaller parameter spaces, Grid Search remains a reliable choice. However, Random Search is a more scalable option for larger spaces or when computational resources are limited."
    ]
   },
   {
