added requirements.txt file refined the notebook

--- a/house_sales_analysis.ipynb
+++ b/house_sales_analysis.ipynb
@@ -72870,7 +72870,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7 Conclusion"
+    "# 7 Conclusion"
    ]
   },
   {
